[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hiero-enterprise-proxy"
version = "1.0.0"
description = "Python client SDK for the Hiero Enterprise Proxy API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Hiero Hackers" }]
keywords = ["hiero", "hedera", "blockchain", "sdk", "proxy", "rest", "api", "dlt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27,<1"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.urls]
Homepage = "https://github.com/hiero-hackers/hiero-enterprise-proxy/tree/main/clients/python"
Repository = "https://github.com/hiero-hackers/hiero-enterprise-proxy.git"
Issues = "https://github.com/hiero-hackers/hiero-enterprise-proxy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hiero_proxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
